21 January 2008: Wouter
	- libworker work, netevent raw commpoints, write_msg, serialize.

18 January 2008: Wouter
	- touch up of manpage for libunbound.
	- support for IP_RECVDSTADDR (for *BSD ip4).
	- fix for BSD, do not use ip4to6 mapping, make two sockets, once
	  ip6 and once ip4, uses socket options.
	- goodbye ip4to6 mapping.
	- update ldns-testpkts with latest version from ldns-trunk.
	- updated makedist for relative ldns pathnames.
	- library API with more information inside the result structure.
	- work on background resolves.

17 January 2008: Wouter
	- fixup configure in case -lldns is installed.
	- fixup a couple of doxygen warnings, about enum variables.
	- interface-automatic now copies the interface address from the
	  PKT_INFO structure as well.
	- manual page with library API, all on one page 'man libunbound'.
	- rewrite of PKTINFO structure, it also captures IP4 PKTINFO.

16 January 2008: Wouter
	- incoming queries to the server with TC bit on are replied FORMERR.
	- interface-automatic replied the wrong source address on localhost
	  queries. Seems to be due to ifnum=0 in recvmsg PKTINFO. Trying
	  to use ifnum=-1 to mean 'no interface, use kernel route'.

15 January 2008: Wouter
	- interface-automatic feature. experimental. Nice for anycast.
	- tpkg test for ip6 ancillary data.
	- removed debug prints.
	- porting experience, define for Solaris, test refined for BSD
	  compatibility. The feature probably will not work on OpenBSD.
	- makedist fixup for ldns-src in build-dir.

14 January 2008: Wouter
	- in no debug sets NDEBUG to remove asserts.
	- configure --enable-debug is needed for dependency generation
	  for assertions and for compiler warnings.
	- ldns.tgz updated with ldns-trunk (where buffer.h is updated).
	- fix lint, unit test in optimize mode.
	- default access control allows ::ffff:127.0.0.1 v6mapped localhost.
	
11 January 2008: Wouter
	- man page, warning removed.
	- added text describing the use of stub zones for private zones.