@@ -1,3 +1,6 @@
+22 January 2008: Wouter
+	- library code for async in libunbound/unbound.c.
+
 21 January 2008: Wouter
 	- libworker work, netevent raw commpoints, write_msg, serialize.
 
